==> openweave/openweave-core/src/adaptations/device-layer/ESP32/BLEManagerImpl.cpp <==
#include <Weave/DeviceLayer/internal/WeaveDeviceLayerInternal.h>
#include <Weave/DeviceLayer/internal/BLEManager.h>
#include <new>
#include "esp_bt.h"
#include "esp_bt_main.h"
#include "esp_gap_ble_api.h"
#include "esp_gatts_api.h"
#include "esp_gatt_common_api.h"
#include "esp_log.h"

WEAVE_ERROR BLEManagerImpl::_Init()
{
    WEAVE_ERROR err;

    // Initialize the Weave BleLayer.
    err = BleLayer::Init(this, this, &SystemLayer);
    SuccessOrExit(err);

    memset(mCons, 0, sizeof(mCons));
    mServiceMode = ConnectivityManager::kWoBLEServiceMode_Enabled;
    mAppIf = ESP_GATT_IF_NONE;
    mServiceAttrHandle = 0;
    mRXCharAttrHandle = 0;
    mTXCharAttrHandle = 0;
    mTXCharCCCDAttrHandle = 0;
    mFlags = kFlag_AdvertisingEnabled;
    memset(mDeviceName, 0, sizeof(mDeviceName));

    PlatformMgr().ScheduleWork(DriveBLEState, 0);

exit:
    return err;
}

bool BLEManagerImpl::CloseConnection(BLE_CONNECTION_OBJECT conId)
{
    WEAVE_ERROR err;

    WeaveLogProgress(DeviceLayer, "Closing BLE GATT connection (con %u)", conId);

    // Signal the ESP BLE layer to close the conntion.
    err = esp_ble_gatts_close(mAppIf, conId);
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "esp_ble_gatts_close() failed: %s", ErrorStr(err));
    }

    // Release the associated connection state record.
    ReleaseConnectionState(conId);

    // Arrange to re-enable connectable advertising in case it was disabled due to the
    // maximum connection limit being reached.
    ClearFlag(mFlags, kFlag_Advertising);
    PlatformMgr().ScheduleWork(DriveBLEState, 0);

    return (err == WEAVE_NO_ERROR);
}

bool BLEManagerImpl::SendIndication(BLE_CONNECTION_OBJECT conId, const WeaveBleUUID * svcId, const WeaveBleUUID * charId, PacketBuffer * data)
{
    WEAVE_ERROR err = WEAVE_NO_ERROR;
    WoBLEConState * conState = GetConnectionState(conId);

    ESP_LOGD(TAG, "Sending indication for WoBLE TX characteristic (con %u, len %u)", conId, data->DataLength());

    VerifyOrExit(conState != NULL, err = WEAVE_ERROR_INVALID_ARGUMENT);

    VerifyOrExit(conState->PendingIndBuf == NULL, err = WEAVE_ERROR_INCORRECT_STATE);

    err = esp_ble_gatts_send_indicate(mAppIf, conId, mTXCharAttrHandle, data->DataLength(), data->Start(), false);
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "esp_ble_gatts_send_indicate() failed: %s", ErrorStr(err));
        ExitNow();
    }

    // Save a reference to the buffer until we get a indication from the ESP BLE layer that it
    // has been sent.
    conState->PendingIndBuf = data;
    data = NULL;

exit:
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "BLEManagerImpl::SendIndication() failed: %s", ErrorStr(err));
        PacketBuffer::Free(data);
        return false;
    }
    return true;
}

void BLEManagerImpl::DriveBLEState(void)
{
    WEAVE_ERROR err = WEAVE_NO_ERROR;

    // If there's already a control operation in progress, wait until it completes.
    VerifyOrExit(!GetFlag(mFlags, kFlag_ControlOpInProgress), /* */);

    // Initializes the ESP BLE layer if needed.
    if (mServiceMode == ConnectivityManager::kWoBLEServiceMode_Enabled && !GetFlag(mFlags, kFlag_ESPBLELayerInitialized))
    {
        err = InitESPBleLayer();
        SuccessOrExit(err);
    }

    // Register the WoBLE application with the ESP BLE layer if needed.
    if (mServiceMode == ConnectivityManager::kWoBLEServiceMode_Enabled && !GetFlag(mFlags, kFlag_AppRegistered))
    {
        err = esp_ble_gatts_app_register(WoBLEAppId);
        if (err != WEAVE_NO_ERROR)
        {
            WeaveLogError(DeviceLayer, "esp_ble_gatts_app_register() failed: %s", ErrorStr(err));
            ExitNow();
        }

        SetFlag(mFlags, kFlag_ControlOpInProgress);

        ExitNow();
    }

    // Register the WoBLE GATT attributes with the ESP BLE layer if needed.
    if (mServiceMode == ConnectivityManager::kWoBLEServiceMode_Enabled && !GetFlag(mFlags, kFlag_AttrsRegistered))
    {
        err = esp_ble_gatts_create_attr_tab(WoBLEGATTAttrs, mAppIf, WoBLEGATTAttrCount, 0);
        if (err != WEAVE_NO_ERROR)
        {
            WeaveLogError(DeviceLayer, "esp_ble_gatts_create_attr_tab() failed: %s", ErrorStr(err));
            ExitNow();
        }

        SetFlag(mFlags, kFlag_ControlOpInProgress);

        ExitNow();
    }

    // Start the WoBLE GATT service if needed.
    if (mServiceMode == ConnectivityManager::kWoBLEServiceMode_Enabled && !GetFlag(mFlags, kFlag_GATTServiceStarted))
    {
        err = esp_ble_gatts_start_service(mServiceAttrHandle);
        if (err != WEAVE_NO_ERROR)
        {
            WeaveLogError(DeviceLayer, "esp_ble_gatts_start_service() failed: %s", ErrorStr(err));
            ExitNow();
        }

        SetFlag(mFlags, kFlag_ControlOpInProgress);

        ExitNow();
    }

    // Start advertising if needed...
    if (mServiceMode == ConnectivityManager::kWoBLEServiceMode_Enabled && GetFlag(mFlags, kFlag_AdvertisingEnabled))
    {
        // Configure advertising data if needed.
        if (!GetFlag(mFlags, kFlag_AdvertisingConfigured))
        {
            err = ConfigureAdvertisingData();
            ExitNow();
        }

        // Start advertising if needed.
        if (!GetFlag(mFlags, kFlag_Advertising))
        {
            err = StartAdvertising();
            ExitNow();
        }
    }

    // Otherwise stop advertising if needed...
    else
    {
        if (GetFlag(mFlags, kFlag_Advertising))
        {
            err = esp_ble_gap_stop_advertising();
            if (err != WEAVE_NO_ERROR)
            {
                WeaveLogError(DeviceLayer, "esp_ble_gap_stop_advertising() failed: %s", ErrorStr(err));
                ExitNow();
            }

            SetFlag(mFlags, kFlag_ControlOpInProgress);

            ExitNow();
        }
    }

    // Stop the WoBLE GATT service if needed.
    if (mServiceMode != ConnectivityManager::kWoBLEServiceMode_Enabled && GetFlag(mFlags, kFlag_GATTServiceStarted))
    {
        // TODO: what to do about existing connections??

        err = esp_ble_gatts_stop_service(mServiceAttrHandle);
        if (err != WEAVE_NO_ERROR)
        {
            WeaveLogError(DeviceLayer, "esp_ble_gatts_stop_service() failed: %s", ErrorStr(err));
            ExitNow();
        }

        SetFlag(mFlags, kFlag_ControlOpInProgress);

        ExitNow();
    }

exit:
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "Disabling WoBLE service due to error: %s", ErrorStr(err));
        mServiceMode = ConnectivityManager::kWoBLEServiceMode_Disabled;
    }
}

WEAVE_ERROR BLEManagerImpl::ConfigureAdvertisingData(void)
{
    WEAVE_ERROR err;
    esp_ble_adv_data_t advertData;
    WeaveServiceData weaveServiceData;

    // If a custom device name has not been specified, generate a Nest-standard name based on the
    // bottom digits of the Weave device id.
    if (!GetFlag(mFlags, kFlag_UseCustomDeviceName))
    {
        snprintf(mDeviceName, sizeof(mDeviceName), "%s%04" PRIX32,
                 WEAVE_DEVICE_CONFIG_BLE_DEVICE_NAME_PREFIX,
                 (uint32_t)FabricState.LocalNodeId);
        mDeviceName[kMaxDeviceNameLength] = 0;
    }

    // Configure the BLE device name.
    err = esp_ble_gap_set_device_name(mDeviceName);
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "esp_ble_gap_set_device_name() failed: %s", ErrorStr(err));
        ExitNow();
    }

    // Configure the contents of the advertising packet.
    memset(&advertData, 0, sizeof(advertData));
    advertData.set_scan_rsp = false;
    advertData.include_name = true;
    advertData.include_txpower = false;
    advertData.min_interval = 0;
    advertData.max_interval = 0;
    advertData.appearance = 0;
    advertData.manufacturer_len = 0;
    advertData.p_manufacturer_data = NULL;
    advertData.service_data_len = 0;
    advertData.p_service_data = NULL;
    advertData.service_uuid_len = sizeof(UUID_WoBLEService);
    advertData.p_service_uuid = (uint8_t *)UUID_WoBLEService;
    advertData.flag = ESP_BLE_ADV_FLAG_GEN_DISC | ESP_BLE_ADV_FLAG_BREDR_NOT_SPT;
    err = esp_ble_gap_config_adv_data(&advertData);
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "esp_ble_gap_config_adv_data(<advertising data>) failed: %s", ErrorStr(err));
        ExitNow();
    }

    // Construct the Weave Service Data to be sent in the scan response packet.
    memcpy(weaveServiceData.ServiceUUID, ShortUUID_WoBLEService, sizeof(weaveServiceData.ServiceUUID));
    weaveServiceData.DataBlockLen = 16;
    weaveServiceData.DataBlockType = 0x16;
    weaveServiceData.DataBlockMajorVersion = 0;
    weaveServiceData.DataBlockMinorVersion = 1;
    Encoding::LittleEndian::Put16(weaveServiceData.DeviceVendorId, (uint16_t)WEAVE_DEVICE_CONFIG_DEVICE_VENDOR_ID);
    Encoding::LittleEndian::Put16(weaveServiceData.DeviceProductId, (uint16_t)WEAVE_DEVICE_CONFIG_DEVICE_PRODUCT_ID);
    Encoding::LittleEndian::Put64(weaveServiceData.DeviceId, FabricState.LocalNodeId);
    weaveServiceData.PairingStatus = ConfigurationMgr().IsPairedToAccount() ? 1 : 0;

    // Configure the contents of the scan response packet.
    memset(&advertData, 0, sizeof(advertData));
    advertData.set_scan_rsp = true;
    advertData.include_name = false;
    advertData.include_txpower = true;
    advertData.min_interval = 0;
    advertData.max_interval = 0;
    advertData.appearance = 0;
    advertData.manufacturer_len = 0;
    advertData.p_manufacturer_data = NULL;
    advertData.service_data_len = sizeof(weaveServiceData);
    advertData.p_service_data = (uint8_t *)&weaveServiceData;
    advertData.service_uuid_len = 0;
    advertData.p_service_uuid = NULL;
    advertData.flag = 0;
    err = esp_ble_gap_config_adv_data(&advertData);
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "esp_ble_gap_config_adv_data(<scan response>) failed: %s", ErrorStr(err));
        ExitNow();
    }

    SetFlag(mFlags, kFlag_ControlOpInProgress);

exit:
    return err;
}

WEAVE_ERROR BLEManagerImpl::StartAdvertising(void)
{
    WEAVE_ERROR err;
    esp_ble_adv_params_t advertParams =
    {
        0,                                  // adv_int_min
        0,                                  // adv_int_max
        ADV_TYPE_IND,                       // adv_type
        BLE_ADDR_TYPE_PUBLIC,               // own_addr_type
        { 0 },                              // peer_addr
        BLE_ADDR_TYPE_RANDOM,               // peer_addr_type
        ADV_CHNL_ALL,                       // channel_map
        ADV_FILTER_ALLOW_SCAN_ANY_CON_ANY,  // adv_filter_policy
    };

    // Advertise connectable if we haven't reached the maximum number of connections.
    size_t numCons = NumConnections();
    bool connectable = (numCons < kMaxConnections);
    advertParams.adv_type = connectable ? ADV_TYPE_IND : ADV_TYPE_NONCONN_IND;

    // Advertise in fast mode if not paired to an account and there are no WoBLE connections.
    advertParams.adv_int_min = advertParams.adv_int_max =
        (numCons == 0 && !ConfigurationMgr().IsPairedToAccount())
        ? WEAVE_DEVICE_CONFIG_BLE_FAST_ADVERTISING_INTERVAL
        : WEAVE_DEVICE_CONFIG_BLE_SLOW_ADVERTISING_INTERVAL;

    WeaveLogProgress(DeviceLayer, "Configuring BLE advertising (interval %" PRIu32 " ms, %sconnectable, device name %s)",
             (((uint32_t)advertParams.adv_int_min) * 10) / 16,
             (connectable) ? "" : "non-",
             mDeviceName);

    err = esp_ble_gap_start_advertising(&advertParams);
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "esp_ble_gap_start_advertising() failed: %s", ErrorStr(err));
        ExitNow();
    }

    SetFlag(mFlags, kFlag_ControlOpInProgress);

exit:
    return err;
}

void BLEManagerImpl::HandleRXCharWrite(esp_ble_gatts_cb_param_t * param)
{
    WEAVE_ERROR err = WEAVE_NO_ERROR;
    PacketBuffer * buf = NULL;
    bool needResp = param->write.need_rsp;

    ESP_LOGD(TAG, "Write request received for WoBLE RX characteristic (con %u, len %u)", param->write.conn_id, param->write.len);

    // Disallow long writes.
    VerifyOrExit(param->write.is_prep == false, err = WEAVE_ERROR_INVALID_ARGUMENT);

    // Copy the data to a PacketBuffer.
    buf = PacketBuffer::New(0);
    VerifyOrExit(buf != NULL, err = WEAVE_ERROR_NO_MEMORY);
    VerifyOrExit(buf->AvailableDataLength() >= param->write.len, err = WEAVE_ERROR_BUFFER_TOO_SMALL);
    memcpy(buf->Start(), param->write.value, param->write.len);
    buf->SetDataLength(param->write.len);

    // Send a response if requested.
    if (needResp)
    {
        esp_ble_gatts_send_response(mAppIf, param->write.conn_id, param->write.trans_id, ESP_GATT_OK, NULL);
        needResp = false;
    }

    // Post an event to the Weave queue to deliver the data into the Weave stack.
    {
        WeaveDeviceEvent event;
        event.Type = DeviceEventType::kWoBLEWriteReceived;
        event.WoBLEWriteReceived.ConId = param->write.conn_id;
        event.WoBLEWriteReceived.Data = buf;
        PlatformMgr().PostEvent(&event);
        buf = NULL;
    }

exit:
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "HandleRXCharWrite() failed: %s", ErrorStr(err));
        if (needResp)
        {
            esp_ble_gatts_send_response(mAppIf, param->write.conn_id, param->write.trans_id, ESP_GATT_INTERNAL_ERROR, NULL);
        }
        // TODO: fail connection???
    }
    PacketBuffer::Free(buf);
}

void BLEManagerImpl::HandleTXCharCCCDWrite(esp_ble_gatts_cb_param_t * param)
{
    WEAVE_ERROR err = WEAVE_NO_ERROR;
    WoBLEConState * conState;
    bool needResp = param->write.need_rsp;
    bool indicationsEnabled;

    ESP_LOGD(TAG, "Write request received for WoBLE TX characteristic CCCD (con %u, len %u)", param->write.conn_id, param->write.len);

    // Find the connection state record.
    conState = GetConnectionState(param->read.conn_id);
    VerifyOrExit(conState != NULL, err = WEAVE_ERROR_NO_MEMORY);

    // Disallow long writes.
    VerifyOrExit(param->write.is_prep == false, err = WEAVE_ERROR_INVALID_ARGUMENT);

    // Determine if the client is enabling or disabling indications.
    indicationsEnabled = (param->write.len > 0 && (param->write.value[0] != 0));

    // Send a response to the Write if requested.
    if (needResp)
    {
        esp_ble_gatts_send_response(mAppIf, param->write.conn_id, param->write.trans_id, ESP_GATT_OK, NULL);
        needResp = false;
    }

    // Post an event to the Weave queue to process either a WoBLE Subscribe or Unsubscribe based on
    // whether the client is enabling or disabling indications.
    {
        WeaveDeviceEvent event;
        event.Type = (indicationsEnabled) ? DeviceEventType::kWoBLESubscribe : DeviceEventType::kWoBLEUnsubscribe;
        event.WoBLESubscribe.ConId = param->write.conn_id;
        PlatformMgr().PostEvent(&event);
    }

    WeaveLogProgress(DeviceLayer, "WoBLE %s received", indicationsEnabled ? "subscribe" : "unsubscribe");

exit:
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "HandleTXCharCCCDWrite() failed: %s", ErrorStr(err));
        if (needResp)
        {
            esp_ble_gatts_send_response(mAppIf, param->write.conn_id, param->write.trans_id, ESP_GATT_INTERNAL_ERROR, NULL);
        }
        // TODO: fail connection???
    }
}

void BLEManagerImpl::DriveBLEState(intptr_t arg)
{
    sInstance.DriveBLEState();
}
