==> openweave/openweave-core/src/adaptations/device-layer/EFR32/BLEManagerImpl.cpp <==
#include <Weave/DeviceLayer/internal/WeaveDeviceLayerInternal.h>
#include <Weave/DeviceLayer/internal/BLEManager.h>
#include <BleLayer/WeaveBleServiceData.h>
#include <new>
#include <Weave/DeviceLayer/EFR32/freertos_bluetooth.h>
#include "rtos_gecko.h"
#define WEAVE_ADV_DATA_TYPE_FLAGS 0x01
#define WEAVE_ADV_DATA_TYPE_UUID 0x03
#define WEAVE_ADV_DATA_TYPE_NAME 0x09
#define WEAVE_ADV_DATA_TYPE_SERVICE_DATA 0x16
#define WEAVE_ADV_DATA_FLAGS 0x06
#define WEAVE_ADV_WOBLE_SERVICE_HANDLE 0
#define WEAVE_ADV_DATA 0
#define WEAVE_ADV_SCAN_RESPONSE_DATA 1
#define WEAVE_ADV_SHORT_UUID_LEN 2
#define MAX_RESPONSE_DATA_LEN 31
#define MAX_ADV_DATA_LEN 31
#define TIMER_CLK_FREQ ((uint32)32768)
#define TIMER_MS_2_TIMERTICK(ms) ((TIMER_CLK_FREQ * ms) / 1000)
#define TIMER_S_2_TIMERTICK(s) (TIMER_CLK_FREQ * s)

WEAVE_ERROR BLEManagerImpl::_Init()
{
    WEAVE_ERROR err;
    errorcode_t ret;

    // Initialize the Weave BleLayer.
    err = BleLayer::Init(this, this, &SystemLayer);
    SuccessOrExit(err);

    memset(mBleConnections, 0, sizeof(mBleConnections));
    memset(mIndConfId, kUnusedIndex, sizeof(mIndConfId));
    mServiceMode = ConnectivityManager::kWoBLEServiceMode_Enabled;

    initBleConfig();

    // Start Bluetooth Link Layer and stack tasks
    ret = bluetooth_start(WEAVE_DEVICE_CONFIG_BLE_LL_TASK_PRIORITY, WEAVE_DEVICE_CONFIG_BLE_STACK_TASK_PRIORITY,
                          initialize_bluetooth); 

    VerifyOrExit(ret == bg_err_success, err = MapBLEError(ret));

    // Create the Bluetooth Application task
    xTaskCreate(bluetoothStackEventHandler,            /* Function that implements the task. */
                WEAVE_DEVICE_CONFIG_BLE_APP_TASK_NAME, /* Text name for the task. */
                WEAVE_DEVICE_CONFIG_BLE_APP_TASK_STACK_SIZE /
                    sizeof(StackType_t),                   /* Number of indexes in the xStack array. */
                this,                                      /* Parameter passed into the task. */
                WEAVE_DEVICE_CONFIG_BLE_APP_TASK_PRIORITY, /* Priority at which the task is created. */
                NULL);                                     /* Variable to hold the task's data structure. */

    mFlags = kFlag_AdvertisingEnabled;
    PlatformMgr().ScheduleWork(DriveBLEState, 0);

exit:
    return err;
}

bool BLEManagerImpl::CloseConnection(BLE_CONNECTION_OBJECT conId)
{
    WEAVE_ERROR                          err = WEAVE_NO_ERROR;
    gecko_msg_le_connection_close_rsp_t *rsp;

    WeaveLogProgress(DeviceLayer, "Closing BLE GATT connection (con %u)", conId);

    rsp = gecko_cmd_le_connection_close(conId);
    err = MapBLEError(rsp->result);

    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "gecko_cmd_le_connection_close() failed: %s", ErrorStr(err));
    }

    return (err == WEAVE_NO_ERROR);
}

bool BLEManagerImpl::SendIndication(BLE_CONNECTION_OBJECT conId,
                                    const WeaveBleUUID *  svcId,
                                    const WeaveBleUUID *  charId,
                                    PacketBuffer *        data)
{
    WEAVE_ERROR                                                   err      = WEAVE_NO_ERROR;
    WoBLEConState *                                               conState = GetConnectionState(conId);
    gecko_msg_gatt_server_send_characteristic_notification_rsp_t *rsp;
    uint16_t cId         = (UUIDsMatch(&WeaveUUID_WoBLEChar_RX, charId) ? gattdb_WoBLEChar_Rx : gattdb_WoBLEChar_Tx);
    uint8_t  timerHandle = GetTimerHandle(conId, true);

    VerifyOrExit(((conState != NULL) && (conState->subscribed != 0)), err = WEAVE_ERROR_INVALID_ARGUMENT);
    VerifyOrExit(timerHandle != kMaxConnections, err = WEAVE_ERROR_NO_MEMORY);

    // start timer for light indication confirmation
    gecko_cmd_hardware_set_soft_timer(TIMER_S_2_TIMERTICK(1), timerHandle, true);

    rsp = gecko_cmd_gatt_server_send_characteristic_notification(conId, cId, data->DataLength(), data->Start());

    err = MapBLEError(rsp->result);

exit:
    PacketBuffer::Free(data);
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "BLEManagerImpl::SendIndication() failed: %s", ErrorStr(err));
        return false;
    }
    return true;
}

void BLEManagerImpl::DriveBLEState(void)
{
    WEAVE_ERROR err = WEAVE_NO_ERROR;

    // Check if BLE stack is initialized
    VerifyOrExit(GetFlag(mFlags, kFlag_EFRBLEStackInitialized), /* */);

    // Start advertising if needed...
    if (mServiceMode == ConnectivityManager::kWoBLEServiceMode_Enabled && GetFlag(mFlags, kFlag_AdvertisingEnabled))
    {
        // Start/re-start advertising if not already started, or if there is a pending change
        // to the advertising configuration.
        if (!GetFlag(mFlags, kFlag_Advertising) || GetFlag(mFlags, kFlag_RestartAdvertising))
        {
            err = StartAdvertising();
            SuccessOrExit(err);
        }
    }

    // Otherwise, stop advertising if it is enabled.
    else if (GetFlag(mFlags, kFlag_AdvertisingEnabled))
    {
        err = StopAdvertising();
        SuccessOrExit(err);
    }

exit:
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "Disabling WoBLE service due to error: %s", ErrorStr(err));
        mServiceMode = ConnectivityManager::kWoBLEServiceMode_Disabled;
    }
}

WEAVE_ERROR BLEManagerImpl::ConfigureAdvertisingData(void)
{
    struct gecko_msg_le_gap_bt5_set_adv_data_rsp_t *setAdvDataRsp;
    WeaveBLEDeviceIdentificationInfo                mDeviceIdInfo;
    WEAVE_ERROR                                     err;
    uint8_t                                         responseData[MAX_RESPONSE_DATA_LEN];
    uint8_t                                         advData[MAX_ADV_DATA_LEN];
    uint8_t                                         index               = 0;
    uint8_t                                         mDeviceNameLength   = 0;
    uint8_t                                         mDeviceIdInfoLength = 0;

    memset(responseData, 0, MAX_RESPONSE_DATA_LEN);
    memset(advData, 0, MAX_ADV_DATA_LEN);

    err = ConfigurationMgr().GetBLEDeviceIdentificationInfo(mDeviceIdInfo);
    SuccessOrExit(err);

    if (!GetFlag(mFlags, kFlag_DeviceNameSet))
    {
        snprintf(mDeviceName, sizeof(mDeviceName), "%s%04" PRIX32, WEAVE_DEVICE_CONFIG_BLE_DEVICE_NAME_PREFIX,
                 (uint32_t)FabricState.LocalNodeId);

        mDeviceName[kMaxDeviceNameLength] = 0;

        gecko_cmd_gatt_server_write_attribute_value(gattdb_device_name, 0, strlen(mDeviceName), (uint8_t *)mDeviceName);
    }

    mDeviceNameLength   = strlen(mDeviceName);   // Device Name length + length field
    mDeviceIdInfoLength = sizeof(mDeviceIdInfo); // Servicedatalen + length+ UUID (Short)

    index                 = 0;
    responseData[index++] = 0x02;                      // length
    responseData[index++] = WEAVE_ADV_DATA_TYPE_FLAGS; // AD type : flags
    responseData[index++] = WEAVE_ADV_DATA_FLAGS;      // AD value

    responseData[index++] = mDeviceNameLength + 1;                // length
    responseData[index++] = WEAVE_ADV_DATA_TYPE_NAME;             // AD type : name
    memcpy(&responseData[index], mDeviceName, mDeviceNameLength); // AD value
    index += mDeviceNameLength;

    responseData[index++] = WEAVE_ADV_SHORT_UUID_LEN + 1; // AD length
    responseData[index++] = WEAVE_ADV_DATA_TYPE_UUID;     // AD type : uuid
    responseData[index++] = ShortUUID_WoBLEService[0];    // AD value
    responseData[index++] = ShortUUID_WoBLEService[1];

    setAdvDataRsp = gecko_cmd_le_gap_bt5_set_adv_data(WEAVE_ADV_WOBLE_SERVICE_HANDLE, WEAVE_ADV_SCAN_RESPONSE_DATA,
                                                      index, (uint8_t *)&responseData);

    if (setAdvDataRsp->result != 0)
    {
        err = MapBLEError(setAdvDataRsp->result);
        WeaveLogError(DeviceLayer, "gecko_cmd_le_gap_bt5_set_adv_data() failed: %s", ErrorStr(err));
        ExitNow();
    }

    index = 0;

    advData[index++] = mDeviceIdInfoLength + WEAVE_ADV_SHORT_UUID_LEN + 1; // AD length
    advData[index++] = WEAVE_ADV_DATA_TYPE_SERVICE_DATA;                   // AD type : Service Data
    advData[index++] = ShortUUID_WoBLEService[0];                          // AD value
    advData[index++] = ShortUUID_WoBLEService[1];
    memcpy(&advData[index], (void *)&mDeviceIdInfo, mDeviceIdInfoLength); // AD value
    index += mDeviceIdInfoLength;

    setAdvDataRsp =
        gecko_cmd_le_gap_bt5_set_adv_data(WEAVE_ADV_WOBLE_SERVICE_HANDLE, WEAVE_ADV_DATA, index, (uint8_t *)&advData);

    err = MapBLEError(setAdvDataRsp->result);

exit:
    return err;
}

WEAVE_ERROR BLEManagerImpl::StartAdvertising(void)
{
    WEAVE_ERROR                                      err;
    struct gecko_msg_le_gap_start_advertising_rsp_t *startAdvRsp;
    uint32_t                                         interval_min;
    uint32_t                                         interval_max;
    uint16_t                                         numConnectionss = NumConnections();
    uint8_t                                          connectableAdv =
        (numConnectionss < kMaxConnections) ? le_gap_connectable_scannable : le_gap_scannable_non_connectable;

    err = ConfigureAdvertisingData();
    SuccessOrExit(err);

    ClearFlag(mFlags, kFlag_RestartAdvertising);

    interval_min = interval_max = ((numConnectionss == 0 && !ConfigurationMgr().IsPairedToAccount()) ||
                                   GetFlag(mFlags, kFlag_FastAdvertisingEnabled))
                                      ? WEAVE_DEVICE_CONFIG_BLE_FAST_ADVERTISING_INTERVAL
                                      : WEAVE_DEVICE_CONFIG_BLE_SLOW_ADVERTISING_INTERVAL;

    gecko_cmd_le_gap_set_advertise_timing(WEAVE_ADV_WOBLE_SERVICE_HANDLE, interval_min, interval_max, 0, 0);

    startAdvRsp = gecko_cmd_le_gap_start_advertising(WEAVE_ADV_WOBLE_SERVICE_HANDLE, le_gap_user_data, connectableAdv);

    err = MapBLEError(startAdvRsp->result);

exit:
    return err;
}

void BLEManagerImpl::HandleTXCharCCCDWrite(volatile struct gecko_cmd_packet *evt)
{
    WEAVE_ERROR      err = WEAVE_NO_ERROR;
    WoBLEConState *  bleConnState;
    bool             indicationsEnabled;
    WeaveDeviceEvent event;

    bleConnState = GetConnectionState(evt->data.evt_gatt_server_user_write_request.connection);

    VerifyOrExit(bleConnState != NULL, err = WEAVE_ERROR_NO_MEMORY);

    // Determine if the client is enabling or disabling indications.
    indicationsEnabled = (evt->data.evt_gatt_server_characteristic_status.client_config_flags == gatt_indication);

    WeaveLogProgress(DeviceLayer, "WoBLE %s received", indicationsEnabled ? "subscribe" : "unsubscribe");

    if (indicationsEnabled)
    {
        // If indications are not already enabled for the connection...
        if (!bleConnState->subscribed)
        {
            bleConnState->subscribed = 1;
            // Post an event to the Weave queue to process either a WoBLE Subscribe or Unsubscribe based on
            // whether the client is enabling or disabling indications.
            {
                event.Type                 = DeviceEventType::kWoBLESubscribe;
                event.WoBLESubscribe.ConId = evt->data.evt_gatt_server_user_write_request.connection;
                PlatformMgr().PostEvent(&event);
            }
        }
    }
    else
    {
        bleConnState->subscribed   = 0;
        event.Type                 = DeviceEventType::kWoBLEUnsubscribe;
        event.WoBLESubscribe.ConId = evt->data.evt_gatt_server_user_write_request.connection;
        PlatformMgr().PostEvent(&event);
    }

exit:
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "HandleTXCharCCCDWrite() failed: %s", ErrorStr(err));
    }
}

void BLEManagerImpl::HandleRXCharWrite(volatile struct gecko_cmd_packet *evt)
{
    WEAVE_ERROR   err = WEAVE_NO_ERROR;
    PacketBuffer *buf;
    uint16_t      writeLen = evt->data.evt_gatt_server_user_write_request.value.len;
    uint8_t *     data     = (uint8_t *)evt->data.evt_gatt_server_user_write_request.value.data;

    // Copy the data to a PacketBuffer.
    buf = PacketBuffer::New(0);
    VerifyOrExit(buf != NULL, err = WEAVE_ERROR_NO_MEMORY);
    VerifyOrExit(buf->AvailableDataLength() >= writeLen, err = WEAVE_ERROR_BUFFER_TOO_SMALL);
    memcpy(buf->Start(), data, writeLen);
    buf->SetDataLength(writeLen);

    WeaveLogDetail(DeviceLayer,
                   "Write request/command received for WoBLE RX characteristic (con %" PRIu16 ", len %" PRIu16 ")",
                   evt->data.evt_gatt_server_user_write_request.connection, buf->DataLength());

    // Post an event to the Weave queue to deliver the data into the Weave stack.
    {
        WeaveDeviceEvent event;
        event.Type                     = DeviceEventType::kWoBLEWriteReceived;
        event.WoBLEWriteReceived.ConId = evt->data.evt_gatt_server_user_write_request.connection;
        event.WoBLEWriteReceived.Data  = buf;
        PlatformMgr().PostEvent(&event);
        buf = NULL;
    }

exit:
    if (err != WEAVE_NO_ERROR)
    {
        WeaveLogError(DeviceLayer, "HandleRXCharWrite() failed: %s", ErrorStr(err));
    }
    PacketBuffer::Free(buf);
}

void BLEManagerImpl::DriveBLEState(intptr_t arg)
{
    sInstance.DriveBLEState();
}
